# totaldms_custom

./: README.md  pyproject.toml
totaldms_custom/: hooks.py  modules.txt
totaldms_custom/fixtures/: client_script.json  workflow.json  workflow_action_master.json  workflow_state.json
totaldms_custom/total_dms_customizations/doctype/contractor_job_evaluation_form/: contractor_job_evaluation_form.js  contractor_job_evaluation_form.json  contractor_job_evaluation_form.py  test_contractor_job_evaluation_form.py
totaldms_custom/total_dms_customizations/doctype/table_compliance/: table_compliance.json  table_compliance.py
totaldms_custom/total_dms_customizations/doctype/table_quality/: table_quality.json  table_quality.py
totaldms_custom/total_dms_customizations/doctype/table_reporting/: table_reporting.json  table_reporting.py
totaldms_custom/total_dms_customizations/doctype/table_safety/: table_safety.json  table_safety.py
totaldms_custom/total_dms_customizations/doctype/table_timeliness/: table_timeliness.json  table_timeliness.py
totaldms_custom/total_dms_customizations/doctype/table_variations/: table_variations.json  table_variations.py
